style fix for overlap problem

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1561,7 +1561,7 @@ nav ul
     padding: 0
 
   .hand
-    width: 383px
+    width: 373px
     margin-right: 0
     float: left
 
@@ -1580,7 +1580,7 @@ nav ul
    .disable-transition
      transition: none
 
-  .squeeveale .card-wrapper
+  .squeeze .card-wrapper
     position: absolute
 
   .stats > div
@@ -1607,6 +1607,7 @@ nav ul
     display-flex()
     flex-direction(column)
     justify-content(space-between)
+    margin-right: -50px
 
     .inner-leftpane
       flex(1)
@@ -1719,6 +1720,7 @@ nav ul
       display-flex()
       flex-direction(row-reverse)
       justify-content(flex-end)
+      margin-left: 40px
 
       .card-wrapper
         margin: 3px 6px
